--- a/ui/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
+++ b/ui/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
@@ -12,7 +12,6 @@
         <label class="label-compressed" for="portOfCall">{{'general.port.ofCall'| translate}}: </label>
         <span id="portOfCall" *ngIf="responseTimestamp.portOfCall != null">
           {{$any(responseTimestamp.portOfCall).unLocationCode}} </span>
-        <!-- {{defaultTimestamp.portOfCall.unLocode}} </span> -->
       </div>
       <div class="p-field p-col-12 p-md-4">
         <!-- Placeholder for additional information -->
@@ -22,7 +21,7 @@
           : </label>
         <span id="vesselIMO"> {{transportCall.vesselIMONumber}}</span>
       </div>
-      <div class="p-field p-col-12 p-md-4" *ngIf="responseTimestamp != null">
+      <div class="p-field p-col-12 p-md-4"  *ngIf="responseTimestamp != null && timestampResponseStatus == 'Accepted'">
         <!-- Placeholder for additional information when rejecting timestamp -->
         <label class="label-compressed" for="eventtimestamp">{{'general.table.header.eventTimestamp.acceptedLabel' |
           translate }}: </label>
@@ -43,8 +42,35 @@
 
 <div class="p-fluid p-formgrid p-grid">
 
-  <div class="p-field p-col-12 p-md-4">
 
+
+    <div class="p-field p-col-12 p-md-5" *ngIf="responseTimestamp != null && timestampResponseStatus == 'Rejected'">
+      <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
+  
+    <div class="p-fluid p-formgrid p-grid" >
+      <div class="p-field p-col-12 p-md-6">
+        <p-calendar id="eventtimestamp" appendTo="body" [(ngModel)]="eventTimestampDate" hourFormat="24"
+                    [monthNavigator]="true" [showButtonBar]="false"
+                    [showIcon]="true" [showWeek]="true"
+                    [yearNavigator]="true" yearRange="2010:2030"
+                    styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
+                    [panelStyleClass]="'datetime-panel'"></p-calendar>
+      </div>
+      <div class="p-field p-col-12 p-md-6">
+        <p-inputMask [(ngModel)]="eventTimestampTime" mask="99:99"
+                      placeholder="{{ 'general.timestamp.time' | translate }}"
+                      styleClass="datetime-time-time-field"></p-inputMask>
+        <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}"
+                tooltipPosition="top"
+                tooltipStyleClass="ToolTipClass"
+                class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock"
+                styleClass="p-button-success"
+                (click)="setEventTimestampToNow()"></button>
+      </div>
+    </div>
+  </div>
+  <div class="p-field p-col-12 p-md-6" *ngIf=" timestampResponseStatus == 'Rejected'"></div>
+  <div class="p-field p-col-12 p-md-4">
     <div [hidden]="!showTerminalOption()">
       <label for="terminalSelected">{{ 'general.terminal.label' | translate }}: </label>
       <p-dropdown id="terminalSelected" styleClass="dropdown" [(ngModel)]="terminalSelected" [options]="terminalOptions"
@@ -131,7 +157,17 @@
     <p-button (onClick)="close()" class="footer_option__buttons" icon="pi pi-times-circle"
       label="{{'general.close.label' | translate}}" iconPos="left">
     </p-button>
-    <p-button (onClick)="savePortcallTimestamp(responseTimestamp)" class="footer_option__buttons"
+    <p-button *ngIf="timestampResponseStatus == 'Rejected'"  (onClick)="savePortcallTimestamp(responseTimestamp)" 
+    [disabled]="validatePortOfCallTimestamp()"
+    class="footer_option__buttons"
+      icon="pi pi-save" label="{{'general.save.Rejecteditor.label' | translate}}"
+      iconPos="left">
+      <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}" styleClass="custom-spinner"
+        strokeWidth="3" animationDuration=".9s"></p-progressSpinner>
+    </p-button>
+
+    <p-button *ngIf="timestampResponseStatus == 'Accepted'"  (onClick)="savePortcallTimestamp(responseTimestamp)" 
+    class="footer_option__buttons"
       icon="pi pi-save" label="{{'general.save.Accepteditor.label' | translate}}"
       iconPos="left">
       <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}" styleClass="custom-spinner"
