--- a/ui/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
+++ b/ui/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
@@ -1,5 +1,4 @@
-<h4>For Transport-Call {{ transportCall.transportCallSequenceNumber}}
-</h4>
+<h4>{{'general.table.header.eventTimestamp.header' | translate }}</h4>
 <div class="headline">
   <p-card styleClass="card-scondary">
     <div class="p-fluid p-formgrid p-grid">
