--- a/ui/src/app/view/app.component.html
+++ b/ui/src/app/view/app.component.html
@@ -1,5 +1,7 @@
 <amplify-auth-container>
-    <amplify-authenticator *ngIf="authState !== 'signedin'  && this.authLocalState"></amplify-authenticator>
+    <amplify-authenticator *ngIf="authState !== 'signedin' && this.authLocalState" >
+      <amplify-sign-in slot="sign-in" hide-sign-up="true"></amplify-sign-in>
+    </amplify-authenticator>
 
     <div *ngIf="authState === 'signedin' && user || !this.authLocalState" class="App">
 
