remove transparant row with headers in transportcall table

--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -43,13 +43,13 @@
   </ng-template>
   <ng-template pTemplate="header">
     <tr>
-      <th style="width:10%">{{'general.transportCall.table.vesselName.label'| translate}}</th>
-      <th style="width:10%">{{'general.transportCall.table.vesselImo.label'| translate}}</th>
-      <th style="width:10%">{{'general.transportCall.table.UNLocationCode.secondLabel'| translate}}</th>
-      <th style="width:15%">{{'general.transportCall.table.estimatedDateofArrival.label'| translate}}</th>
-      <th style="width:15%">{{'general.transportCall.table.importVoyageNumber.label'| translate}}</th>
-      <th style="width:15%">{{'general.transportCall.table.exportVoyageNumber.label'| translate}}</th>
-      <th style="width:15%">{{'general.transportCall.table.carrierServiceCode.label'| translate}}</th>
+      <th style="width:10%" class="noTransparancy">{{'general.transportCall.table.vesselName.label'| translate}}</th>
+      <th style="width:10%" class="noTransparancy">{{'general.transportCall.table.vesselImo.label'| translate}}</th>
+      <th style="width:10%" class="noTransparancy">{{'general.transportCall.table.UNLocationCode.secondLabel'| translate}}</th>
+      <th style="width:15%" class="noTransparancy">{{'general.transportCall.table.estimatedDateofArrival.label'| translate}}</th>
+      <th style="width:15%" class="noTransparancy">{{'general.transportCall.table.importVoyageNumber.label'| translate}}</th>
+      <th style="width:15%" class="noTransparancy">{{'general.transportCall.table.exportVoyageNumber.label'| translate}}</th>
+      <th style="width:15%" class="noTransparancy">{{'general.transportCall.table.carrierServiceCode.label'| translate}}</th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-transportCall>
