--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -11,7 +11,7 @@
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="portOfCall">{{'general.port.ofCall'| translate}}: </label>
         <span id="portOfCall"
-              *ngIf="defaultTimestamp.portOfCall != null">  {{$any(defaultTimestamp.portOfCall).unLocationCode}} </span>
+              *ngIf="defaultTimestamp.portOfCall != null">  {{$any(defaultTimestamp.portOfCall).UNLocationCode}} </span>
         <!-- {{defaultTimestamp.portOfCall.unLocode}} </span> -->
       </div>
       <div class="p-field p-col-12 p-md-4">
