--- a/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/src/app/view/timestamp-table/timestamp-table.component.html
@@ -163,7 +163,7 @@
         [ngClass]="'timestampContent'"
         style="width: 8%">
         <div
-          [ngClass]="'timestampContent'"> {{timestamp.portOfCall?.unLocationCode}}</div>
+          [ngClass]="'timestampContent'"> {{timestamp.portOfCall?.UNLocationCode}}</div>
         <div class="rowDetails">{{timestamp.portOfCall?.unLocationName}}</div>
       </td>
       <td style="width: 6%"
