--- a/src/app/view/port-of-call/port-of-call.component.html
+++ b/src/app/view/port-of-call/port-of-call.component.html
@@ -7,14 +7,14 @@
         [(ngModel)]="portOfCall"
         [filter]="true"
         [options]="portOptions"
-        filterBy="label,value.unLocationCode">
+        filterBy="label,value.UNLocationCode">
         <ng-template let-port pTemplate="item">
           <div *ngIf="!port.value">
             <div>Select port</div>
           </div>
           <div *ngIf="port.value">
             <div>{{port.value.unLocationName}}</div>
-            <div class="portListName">{{port.value.unLocationCode}}</div>
+            <div class="portListName">{{port.value.UNLocationCode}}</div>
           </div>
         </ng-template>
       </p-dropdown>
