Correct display of port list
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/port-of-call/port-of-call.component.html
+++ b/src/app/view/port-of-call/port-of-call.component.html
@@ -13,8 +13,8 @@
             <div>Select port</div>
           </div>
           <div *ngIf="port.value">
-            <div>{{port.value.unLocationName}}</div>
-            <div class="portListName">{{port.value.UNLocationCode}}</div>
+            <div>{{port.value.UNLocationCode}}</div>
+            <div class="portListName">{{port.value.UNLocationName}}</div>
           </div>
         </ng-template>
       </p-dropdown>
