--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -1,49 +1,48 @@
 <div class="main">
-    <div>
-      <app-header></app-header>
+  <div>
+    <app-header></app-header>
+  </div>
+  <div class="main_spcerHeadlin"></div>
+  <div class="main__spaceInnerComponent, main__spaceBetween" style=" min-width: 1200px">
+
+    <div class="main__cards">
+      <app-port-of-call class="rightSpace fullWidthAndHeight" (portOfCallNotifier)="portOfCallChangedHandler($event)">
+      </app-port-of-call>
+      <app-vessel class="fullWidthAndHeight" (vesselNotifier)="vesselChangedHandler($event)"
+        (vesselSavedNotifier)="vesselSavedHandler($event)"></app-vessel>
+
     </div>
-    <div class="main_spcerHeadlin"></div>
-    <div class="main__spaceInnerComponent, main__spaceBetween" style=" min-width: 1200px">
-  
-      <div class="main__cards">
-        <app-port-of-call class="rightSpace fullWidthAndHeight"
-                          (portOfCallNotifier)="portOfCallChangedHandler($event)"></app-port-of-call>
-        <app-vessel class="fullWidthAndHeight" (vesselNotifier)="vesselChangedHandler($event)"
-                    (vesselSavedNotifier)="vesselSavedHandler($event)"></app-vessel>
-  
-      </div>
-      <div class="main__content">
-        <p-splitter [style]="{'height': '300px'}" layout="vertical">
-          <ng-template>
-            <p-card>
-              <div class="main__top_content_pane">
-                <app-transport-calls-table (transportCallNotifier)="transportCallSelectHandler($event)"></app-transport-calls-table>
-              </div>
-            </p-card>
-          </ng-template>
-  
-          <div class="main__spaceInnerComponent, main__spaceBetween" style=" min-width: 1200px">
-          </div>
-          <ng-template>
-            <p-card>
-  
-              <div class="main__bottom_content_pane">
-                <app-timestamp-table (timeStampAcceptNotifier)="timestampRespondedHandler($event)"
-                                     [TransportCallSelected]="transportCallSelected"
-  
-                ></app-timestamp-table>
-                <div class="stickyFooterDiv">
-                  <!-- <app-timestamp-paginator [portCallTimeStampAdded]="portCallTimeStampAdded"
+    <div class="main__content">
+      <p-splitter [style]="{'height': '300px'}" layout="vertical">
+        <ng-template pTemplate>
+          <p-card>
+            <div class="main__top_content_pane">
+              <app-transport-calls-table (transportCallNotifier)="transportCallSelectHandler($event)">
+              </app-transport-calls-table>
+            </div>
+          </p-card>
+        </ng-template>
+
+        <div class="main__spaceInnerComponent, main__spaceBetween" style=" min-width: 1200px">
+        </div>
+        <ng-template pTemplate>
+          <p-card>
+
+            <div class="main__bottom_content_pane">
+              <app-timestamp-table (timeStampAcceptNotifier)="timestampRespondedHandler($event)"
+                [TransportCallSelected]="transportCallSelected"></app-timestamp-table>
+              <div class="stickyFooterDiv">
+                <!-- <app-timestamp-paginator [portCallTimeStampAdded]="portCallTimeStampAdded"
                                            [portCallTimeStampDeleted]="portCallTimeStampDeleted"
                                            [portCallTimeStampResponded]="portCallTimeStampResponded"
                                            [portOfCall]="portOfCall"
                                            [vesselId]="vesselId">
                   </app-timestamp-paginator> -->
-                </div>
               </div>
-            </p-card>
-          </ng-template>
-        </p-splitter>
-      </div>
+            </div>
+          </p-card>
+        </ng-template>
+      </p-splitter>
     </div>
   </div>
+</div>
