--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -23,11 +23,10 @@
           </p-card>
         </ng-template>
 
-        <div class="main__spaceInnerComponent, main__spaceBetween" style=" min-width: 1200px">
-        </div>
+        <div class="main__spaceInnerComponent, main__spaceBetween" style=" min-width: 1200px"></div>
+
         <ng-template pTemplate>
           <p-card>
-
             <div class="main__bottom_content_pane">
               <app-timestamp-table (timeStampAcceptNotifier)="timestampRespondedHandler($event)"
                 [TransportCallSelected]="transportCallSelected"></app-timestamp-table>
